src/pages/Main/components/category-section/CategoryCards.scss
.category {
  margin-top: 34px;
  overflow: hidden;

  &__card-container {
    display: flex;
    flex-wrap: wrap;
    gap: 16px;
    margin-top: 40px;
  }

  &__card {
    flex: 1 0 calc(50% - 16px);
    border-radius: 24px;
    display: grid;
    grid-template-columns: 33% auto;
    justify-content: space-between;
    gap: 32px;
  }

  &__card1 {
    background: $category-type1;
  }

  &__card2 {
    background: $category-type2;
  }

  &__card3 {
    background: $category-type3;
  }

  &__card4 {
    background: $category-type4;
  }

  &__image-container {
    width: 100%;
    height: 100%;
  }

  &__image-background1 {
    background: url('@/assets/images/svg/categories-blob-type1.svg') no-repeat;
    background-size: contain;
  }

  &__image-background2 {
    background: url('@/assets/images/svg/categories-blob-type2.svg') no-repeat;
    background-size: contain;
  }

  &__image-background3 {
    background: url('@/assets/images/svg/categories-blob-type3.svg') no-repeat;
    background-size: contain;
  }

  &__image-background4 {
    background: url('@/assets/images/svg/categories-blob-type4.svg') no-repeat;
    background-size: contain;
  }

  &__image {
    width: 100%;
    object-fit: cover;
    object-position: center;
  }

  &__content {
    display: block;
    padding: 60px 62px 105px 0;
  }

  &__cardHeader {
    @include GolosMedium(28px, 110%, $grayscale-50);
  }

  &__tagsContainer {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
    margin-top: 32px;
  }

  @media screen and (max-width: $large-desktop) {
    margin-top: calc(48px + (34 - 48) * (100vw - 360px) / (1559.9 - 360));

    &__card-container {
      gap: calc(8px + (16 - 8) * (100vw - 360px) / (1559.9 - 360));
      margin-top: calc(16px + (40 - 16) * (100vw - 360px) / (1559.9 - 360));
    }
  }

  @media screen and (max-width: $medium-desktop) {
    &__card {
      gap: 16px;
    }

    &__content {
      display: block;
      padding: 40px 40px 80px 0;
    }

    &__cardHeader {
      @include GolosMedium(24px, 110%, $grayscale-50);
    }

    &__tagsContainer {
      display: flex;
      flex-wrap: wrap;
      gap: 8px;
      margin-top: 28px;
    }
  }

  @media screen and (max-width: $small-desktop) {
    &__card {
      flex: 1 0 100%;
    }

    &__image {
      max-width: 200px;
    }
  }

  @media screen and (max-width: $tablet) {
    &__header {
      @include GolosMedium(20px, 115%, $grayscale-900);
    }

    &__card {
      flex: 1 0 100%;
      border-radius: 12px;
      display: block;
      position: relative;
    }

    &__image-container {
      position: absolute;
      top: -20px;
      right: 10px;
      width: 132px;
      height: 160px;
      z-index: 1;
    }

    &__content {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      padding: 16px;
      position: relative;
      z-index: 2;
    }

    &__cardHeader {
      @include GolosMedium(18px, 115%, $grayscale-50);
      width: 175px;
    }

    &__tagsContainer {
      height: 52px;
      width: 290px;
      overflow: hidden;
      display: flex;
      flex-wrap: wrap;
      gap: 6px;
      align-items: flex-end;
    }
  }
}

